first tests xml-rpc